<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FeatherX Browser</string>
    <string name="url_hint">Search or enter URL…</string>
    <string name="tab_count">1</string>
    <string name="find_hint">Find in page</string>
    <string name="find_prev">Previous match</string>
    <string name="find_next">Next match</string>
    <string name="find_close">Close find bar</string>
    <string name="btn_home">Home</string>
    <string name="btn_search_engine">Search engine</string>
    <string name="btn_new_tab">New tab</string>
    <string name="btn_tabs">Tabs</string>
    <string name="btn_overflow">More</string>
    <string name="menu_back">Back</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_bookmark">Add bookmark</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_history">History</string>
    <string name="menu_share">Share</string>
    <string name="menu_reload">Reload</string>
    <string name="menu_find">Find in page</string>
    <string name="menu_devtools">DevTools</string>
    <string name="menu_js_inject">JS Inject</string>
    <string name="menu_cookies">Cookies</string>
    <string name="menu_desktop_mode">Desktop mode</string>
    <string name="menu_ua">User agent</string>
    <string name="menu_site_settings">Site settings</string>
    <string name="menu_save_page">Save page</string>
    <string name="menu_clear_data">Clear browsing data</string>
    <string name="menu_new_tab">New tab</string>
    <string name="menu_close_tab">Close tab</string>
    <string name="menu_incognito">Incognito mode</string>
    <string name="btn_close_tab">Close tab</string>
    <string name="btn_back">Back</string>
    <string name="btn_forward">Forward</string>
    <string name="btn_reload">Reload</string>
    <string name="btn_bookmark">Bookmark</string>
    <string name="btn_site_info">Site info</string>
</resources>
