<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_back" android:title="@string/menu_back" android:icon="@drawable/ic_back" />
    <item android:id="@+id/menu_forward" android:title="@string/menu_forward" android:icon="@drawable/ic_forward" />
    <item android:id="@+id/menu_reload" android:title="@string/menu_reload" android:icon="@drawable/ic_reload" />
    <item android:id="@+id/menu_bookmark" android:title="@string/menu_bookmark" android:icon="@drawable/ic_bookmark" />
    <item android:id="@+id/menu_bookmarks" android:title="@string/menu_bookmarks" />
    <item android:id="@+id/menu_history" android:title="@string/menu_history" android:icon="@drawable/ic_history" />
    <item android:id="@+id/menu_find" android:title="@string/menu_find" android:icon="@drawable/ic_find" />
    <item android:id="@+id/menu_share" android:title="@string/menu_share" android:icon="@drawable/ic_share" />
    <item android:id="@+id/menu_save_page" android:title="@string/menu_save_page" />
    <item android:id="@+id/menu_devtools" android:title="@string/menu_devtools" />
    <item android:id="@+id/menu_js_inject" android:title="@string/menu_js_inject" />
    <item android:id="@+id/menu_cookies" android:title="@string/menu_cookies" />
    <item android:id="@+id/menu_desktop_mode" android:title="@string/menu_desktop_mode" />
    <item android:id="@+id/menu_ua" android:title="@string/menu_ua" />
    <item android:id="@+id/menu_clear_data" android:title="@string/menu_clear_data" />
    <item android:id="@+id/menu_site_settings" android:title="@string/menu_site_settings" />
</menu>
